# llm-explorer

./: .gitignore  README.md  llm-explorer.code-workspace
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
frontend/: .gitignore  .prettierrc  eslint.config.js  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ApiButtons.test.tsx  ApiButtons.tsx
